<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_licoreria"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_licor" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_enoturismo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_enotur" />
        <item
            android:id="@+id/nav_tintilla"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tintilla" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contact" />
    </group>
</menu>