<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.grt.tiendalicoreria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_licoreria"
        android:name="com.grt.tiendalicoreria.ui.licoreria.LicoreriaFragment"
        android:label="@string/menu_licor"
        tools:layout="@layout/fragment_licoreria" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.grt.tiendalicoreria.ui.category.CategoryFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_nav_category_to_productFragment"
            app:destination="@id/productFragment" />
        <action
            android:id="@+id/action_nav_category_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_enoturismo"
        android:name="com.grt.tiendalicoreria.ui.category.CategoryFragment"
        android:label="@string/menu_enotur"
        tools:layout="@layout/fragment_enoturismo" />

    <fragment
        android:id="@+id/nav_tintilla"
        android:name="com.grt.tiendalicoreria.ui.category.CategoryFragment"
        android:label="@string/menu_tintilla"
        tools:layout="@layout/fragment_tintilla" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.grt.tiendalicoreria.ui.category.CategoryFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contacto" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.grt.tiendalicoreria.ui.product.ProductFragment"
        android:label="Listado Productos"
        tools:layout="@layout/fragment_product">
        <argument
            android:name="category"
            app:argType="com.grt.tiendalicoreria.domain.model.CategoryModel" />
        <action
            android:id="@+id/action_productFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_productFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.grt.tiendalicoreria.ui.detail.DetailFragment"
        android:label="Detalle del Producto"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="product"
            app:argType="com.grt.tiendalicoreria.domain.model.ProductModel" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.grt.tiendalicoreria.ui.cart.CartFragment"
        android:label="CartFragment"
        tools:layout="@layout/fragment_cart"/>
    <fragment
        android:id="@+id/nav_order"
        android:name="com.grt.tiendalicoreria.ui.order.OrderFragment"
        android:label="Historial de Pedidos"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_nav_order_to_trackFragment"
            app:destination="@id/trackFragment" />
        <action
            android:id="@+id/action_nav_order_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/trackFragment"
        android:name="com.grt.tiendalicoreria.ui.track.TrackFragment"
        android:label="TrackFragment"
        tools:layout="@layout/fragment_track">
        <argument
            android:name="orderSelected"
            app:argType="com.grt.tiendalicoreria.domain.model.OrderModel" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.grt.tiendalicoreria.ui.chat.ChatFragment"
        android:label="ChatFragment"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="orderSelected"
            app:argType="com.grt.tiendalicoreria.domain.model.OrderModel" />
    </fragment>
</navigation>